--- a/views/home/index_list.html
+++ b/views/home/index_list.html
@@ -2,7 +2,7 @@
     <td>{{.WebHookId}}</td>
     <td>{{.RepositoryName}}</td>
     <td>{{.BranchName}}</td>
-    <td>{{.Tag}}</td>
+    <td>{{.HookType}}</td>
     <td>{{date .CreateTime "Y-m-d H:i:s"}}</td>
     <td>
         {{if eq .Status 0}}
