--- a/views/home/index.html
+++ b/views/home/index.html
@@ -109,7 +109,7 @@
                             <label>Url </label>
                         </div>
                         <div class="col-lg-10">
-                            <input type="text" id="urlInput" placeholder="URL" class="form-control" data-value="{{.BaseUrl}}/{{urlfor "HomeController.Payload" ":key" ""}}">
+                            <input type="text" id="urlInput" placeholder="URL" class="form-control" data-value="{{.BaseUrl}}{{urlfor "PayloadController.Index" ":key" ""}}">
                         </div>
                     </div>
                     <div class="form-group">
